--- a/Práctica1.RepositoriosGitHub/prueba.html
+++ b/Práctica1.RepositoriosGitHub/prueba.html
@@ -38,7 +38,7 @@
     </main>
 
     <footer>
-        <p>Hecho por Amantes de los Animales</p>
+        <p>Hecho con ❤️ por Amantes de los Animales</p>
     </footer>
 
     <script src="script.js"></script>
